언어파일 번역 추가

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
     "areon": "Areon",
-    "loginToInsta": "Login to Instagram"
+    "loginToInsta": "Login to Instagram",
+    "dm" : "Direct Message"
 }
